# libAdvanceWars

./: BattleField.cpp  BattleField.h  CMakeLists.txt  Campaign.cpp  Commander.h  Corp.cpp  Corp.h  DamageCaculator.cpp  Game_AdvanceWars.cpp  Game_AdvanceWars.h  Makefile  Senario.cpp  Senario.h  Settings.h  Terrain.cpp  Terrain.h  Unit.cpp  Unit.h
Client/: Game_AdvanceWars.cpp  Game_AdvanceWars.h  ScenarioScript.cpp  ScenarioScript.h  Settings.cpp  Settings.h
Client/Dialogs/: Dialog_NewMap.cpp  Dialog_NewMap.h
Client/Layers/: Layer_BattleField.cpp  Layer_BattleField.h  Layer_BattleFieldInfo.cpp  Layer_BattleFieldInfo.h  Layer_Conversation.cpp  Layer_Conversation.h  Layer_Weather.cpp  Layer_Weather.h
Client/Menus/: Menu_BattleField.cpp  Menu_BattleField.h  Table_CampaignTroops.cpp  Table_CampaignTroops.h  Table_CampaignWeather.cpp  Table_CampaignWeather.h
Client/Scenes/: Scene_BattleAnimation.cpp  Scene_BattleAnimation.h  Scene_BattleField.cpp  Scene_BattleField.h  Scene_CampaignPrepare.cpp  Scene_CampaignPrepare.h  Scene_CommanderInfo.cpp  Scene_CommanderInfo.h  Scene_DataTable.cpp  Scene_DataTable.h  Scene_GameSetting.cpp  Scene_Main.cpp  Scene_Main.h
Client/Sprites/: Menu_CorpCommand.cpp  Menu_CorpCommand.h  Sprite_CampaignInfo.cpp  Sprite_CampaignInfo.h  Sprite_Terrain.cpp  Sprite_Terrain.h  Sprite_TerrainInfo.cpp  Sprite_TerrainInfo.h  Sprite_Unit.cpp  Sprite_Unit.h  Sprite_UnitInfo.cpp  Sprite_UnitInfo.h
Client/Tables/: Table_CommandersData.cpp  Table_CommandersData.h  Table_CorpsData.cpp  Table_CorpsData.h  Table_TerrainsData.cpp  Table_TerrainsData.h  Table_TroopsData.cpp  Table_TroopsData.h  Table_UnitsData.cpp  Table_UnitsData.h  Table_WeathersData.cpp  Table_WeathersData.h
Game/: AI.cpp  AI.h  BattleField.cpp  BattleField.h  BattleField_BabyWars.cpp  Campaign.cpp  Campaign.h  CampaignScript.cpp  Commander.cpp  Commander.h  Corp.cpp  Corp.h  DamageCaculator.cpp  DamageCaculator.h  DataList.h  Settings.cpp  Settings.h  Terrain.cpp  Terrain.h  Troop.cpp  Troop.h  Unit.cpp  Unit.h  Weather.cpp  Weather.h
Game/Lua/: LuaEx.cpp  LuaEx.h
GameScenes/: GameScene_Main.cpp  GameScene_Main.h
Scenes/: Scene_BattleField.cpp  Scene_BattleField.h  Scene_CommanderInfo.cpp  Scene_DataTable.cpp  Scene_GameSetting.h  Scene_Main.cpp  Scene_Main.h
Structs/: Campaign.h  Commander.cpp  Corp.cpp  Corp.h  DataList.h  Senario.cpp  Senario.h  Settings.cpp  Settings.h  Terrain.cpp  Unit.h  Weather.cpp  Weather.h
Tools/: AwbwCategory.cpp  AwbwCategory.h  AwbwMap.cpp  AwbwMap.h
Tools/executable/: Awbw2Csv.cpp  DownloadCategory.cpp  DownloadMap.cpp  ToFreeWars.cpp  main.cpp
executable/: AdvanceWarsGLUT.cpp  AdvanceWarsX11.cpp
renderer/: Renderer_BattleField.cpp  Texture.cpp  Texture.h  Textures.cpp  Textures.h
