cmake_minimum_required(VERSION 3.2)
project(AdvanceWars)
aux_source_directory(renderer RENDER_LIST)
include(../../CompileScripts/CMakeLists.txt)
include_directories(renderer)
include_directories(../../libCpp11)
include_directories(../../libZipper)
include_directories(../../libImage)
include_directories(../../libImage/FileStructs)
include_directories(../../libImage/ColorSpaces)
include_directories(../../lua)
include_directories(../../tinyxml2)
include_directories(../libChessEngine)

add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
add_library(${PROJECT_NAME}Render SHARED ${RENDER_LIST})

if(${TARGET_SYSTEM_NAME} STREQUAL Linux)
add_executable(AdvanceWarsGLUT executable/AdvanceWarsGLUT.cpp)
target_link_libraries(AdvanceWarsGLUT AdvanceWars AdvanceWarsRender Image Zipper Cpp11 glut GL)
endif()