cmake_minimum_required(VERSION 2.8)
project(AdvanceWars)
aux_source_directory(GameScenes SRC_LIST)
include(../../CompileScripts/CMakeLists.txt)
include_directories(renderer)
include_directories(../../libCpp11)
include_directories(../../libZipper)
include_directories(../../libImage)
include_directories(../../libImage/FileStructs)
include_directories(../../libImage/ColorSpaces)
include_directories(../../lua)
include_directories(../../tinyxml2)
include_directories(../libChessEngine)
include_directories(../libGamesEngines)
include_directories(GameScenes)

add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} GamesEngines)

if(${TARGET_SYSTEM_NAME} STREQUAL Linux)
add_executable(AdvanceWarsGLUT ../libGamesEngines/executable/GamesGLUT.cpp)
add_executable(AdvanceWarsGLFW ../libGamesEngines/executable/GamesGLFW.cpp)

target_link_libraries(AdvanceWarsGLUT AdvanceWars GamesEngines glut GL)
target_link_libraries(AdvanceWarsGLFW AdvanceWars GamesEngines glfw GL)
endif()